Hidden complications in ambient mode. Various upgrades. Changed watchface name.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,9 +15,9 @@
      limitations under the License.
 -->
 <resources>
-    <string name="app_name" translatable="false">WatchFace Alpha (Kotlin)</string>
+    <string name="app_name" translatable="false">Checkpoint WatchFace</string>
 
-    <string name="analog_watch_face_name" translatable="false">Alpha Analog</string>
+    <string name="analog_watch_face_name" translatable="false">Checkpoint</string>
 
     <!-- Name of watchface style category for selecting the color theme [CHAR LIMIT=20] -->
     <string name="colors_style_setting">Colors</string>
